samples/_failures_safe/1761475664_a0fdc2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b01b7f65.c: In function ‘main’:
./samples/SAFE/__tmp_b01b7f65.c:139:16: error: missing terminating " character
  139 |         printf("Invalid
      |                ^~~~~~~~
./samples/SAFE/__tmp_b01b7f65.c:139:9: error: expected expression at end of input
  139 |         printf("Invalid
      |         ^~~~~~
./samples/SAFE/__tmp_b01b7f65.c:139:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b01b7f65.c:139:9: error: expected declaration or statement at end of input
